Preparing actual 2.0.0 release.
 * Now Java11+
 * Modularity
 * Removed obsolete modules
 * Bumped some providers